update: project text

--- a/index.html
+++ b/index.html
@@ -831,11 +831,10 @@
                              <!-- Canvas will be mounted here -->
                         </div>
                         <div class="pf-content">
-                            <span class="pf-meta">003 // Infrastructure</span>
+                            <span class="pf-meta">003 // Professional DEX Solvers Delivering Best Execution & MEV Protection</span>
                             <h3 class="pf-title">Helixbox Solvers</h3>
                             <div class="pf-desc">
-                                <p>Helixbox Solvers is a professional-grade DEX solving system designed to provide optimal trade execution and comprehensive MEV protection. By integrating directly with leading decentralized exchange frontends such as CoW Swap and 1inch, we empower users with safer, more efficient, and more cost-effective on-chain trading.</p>
-                                <p>Built on advanced routing algorithms, real-time market modeling, and high-performance execution engines, Helixbox Solvers intelligently analyze liquidity across chains and protocols to determine the most favorable trading paths. This enables us to minimize slippage, reduce gas costs, and maximize user outcomes under dynamic market conditions.</p>
+                                <p>Helixbox Solver powers best-in-class trade execution by blending liquidity from everywhere that matters—on-chain, cross-chain, and off-chain. By processing flows from Cow.fi and 1inch, it instantly computes optimal routes that minimize slippage and maximize user value. Whether liquidity lives on a DEX, a bridge, or a private market maker, Helixbox brings it together into a single seamless execution layer.</p>
                             </div>
                             <!-- Removed System Active button -->
                         </div>
@@ -847,11 +846,11 @@
                              <!-- Canvas will be mounted here -->
                         </div>
                         <div class="pf-content">
-                            <span class="pf-meta">004 // AI Governance</span>
+                            <span class="pf-meta">004 // The AI-Powered DAO Governance Platform</span>
                             <h3 class="pf-title">DeGov.AI</h3>
                             <div class="pf-desc">
-                                <p>DeGov.AI is an innovative platform that enhances decentralized autonomous organization (DAO) governance through the power of artificial intelligence. Built upon OpenZeppelin's proven Governor contracts, DeGov.AI offers an intuitive interface for streamlined proposal creation, voting processes, and treasury management.</p>
-                                <p>By harnessing AI-driven insights into proposal content, voting behavior, and treasury dynamics, DeGov.AI simplifies DAO governance, making it more accessible and engaging for all participants. This leads to increased community involvement and more informed decision-making.</p>
+                                <p>DeGov.AI is a RingDAO project dedicated to revolutionizing DAO governance with AI. Supported by Helixbox Labs—who provide essential R&D and marketing services—the platform is built on OpenZeppelin's trusted Governor contracts to offer a streamlined, intuitive experience.</p>
+                                <p>By utilizing AI to analyze proposals, voting patterns, and treasury health, DeGov.AI simplifies complex governance tasks. This empowers participants to make smarter decisions and fosters deeper community engagement.</p>
                             </div>
                             <a href="https://degov.ai/" target="_blank" class="btn pf-cta">
                                 Launch Terminal
