update: Pubfi -> PubFi

--- a/index.html
+++ b/index.html
@@ -965,14 +965,14 @@
                         </div>
                     </article>
 
-                    <!-- Item 2: Pubfi -->
+                    <!-- Item 2: PubFi -->
                     <article class="pf-section reveal">
                         <div class="pf-visual" id="viz-pubfi">
                              <!-- Canvas will be mounted here -->
                         </div>
                         <div class="pf-content">
                             <span class="pf-meta">002 // AI-Driven Intelligence Platform</span>
-                            <h3 class="pf-title">Pubfi</h3>
+                            <h3 class="pf-title">PubFi</h3>
                             <div class="pf-desc">
                                 <p>PubFi is an AI-driven intelligence platform that restructures fragmented crypto information into clear, actionable insights. Powered by an end-to-end “intelligence supply chain,” PubFi ingests news, on-chain data, community signals, and prediction-market activity, then transforms them into precise, topic-based intelligence streams.</p>
                                 <p>Its intelligence-mining engine uses ontology-inspired structuring to understand entities, events, and their relationships across the crypto landscape. By mapping signals to well-defined concepts and topics, PubFi filters noise, preserves context, and enables both AI and human editors to refine insights with higher accuracy. The result is a fast, reliable intelligence feed that helps users track narratives, interpret market movements, and make sharper decisions.</p>
