update: add careers button

--- a/index.html
+++ b/index.html
@@ -907,6 +907,7 @@
             <nav class="nav-links" id="nav-links">
                 <a href="#portfolio" class="nav-link">PORTFOLIO</a>
                 <a href="#ecosystem" class="nav-link">Partners</a>
+                <a href="https://hirevise.com/helixbox" class="nav-link" target="_blank" rel="noopener noreferrer">Careers</a>
                 <a href="mailto:hello@helixbox.ai" class="nav-link btn-cta">Contact Us</a>
             </nav>
         </div>
